--- a/src/css/waves.css
+++ b/src/css/waves.css
@@ -8,7 +8,7 @@
   margin-bottom: -7px; /*Fix for safari gap*/
   min-height: 50px;
   max-height: 150px;
-  background-color: #62cfcfc8;
+  background-color: #00000b;
 }
 
 .content {
